<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyEvent_login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="register">S\'inscrire</string>
	<string name="name">Nom Prenom</string>
	<string name="email">Adresse email</string>
	<string name="password">mot de passe</string>
	<string name="alreadyregistred">Déjà inscrit, se connecter</string>
	<string name="login">Connexion</string>
	<string name="rememberme">Rester connecté</string>
	<string name="new_account">S\'inscrire</string>
	<string name="logout">Déconnexion</string>
	<string name="notification">Connexion réussie</string>
	<string name="notification_title">Vous êtes connecté</string>
	<string name="notification_desc">votre session est active</string>
</resources>

